<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_settings">Filter</string>
    <string name="hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="begin_date">Begin Date</string>
    <string name="sort">Sort Order</string>
    <string name="news_desk">News Desk Values</string>
    <string name="artCheckBox">Arts</string>
    <string name="fashionCheckBox">Fashion and Style</string>
    <string name="sportCheckBox">Sports</string>
    <string name="saveBtn">Save</string>
</resources>
