<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:weightSum="1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <TextView
            android:id="@+id/tvBeginDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/begin_date"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="0.04"
            android:textColor="@color/colorAccent"/>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textStyle="bold"
            android:layout_alignBottom="@+id/tvBeginDate" />

        <TextView
            android:id="@+id/tvSortOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvDate"
            android:layout_marginTop="50dp"
            android:text="@string/sort"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"/>

        <Spinner
            android:id="@+id/spSortOrder"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:entries="@array/sortBy_array"
            android:textSize="25sp"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:layout_alignBottom="@+id/tvSortOrder"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/tvNewsDeskValues"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_desk"
            android:textSize="25sp"
            android:layout_marginTop="50dp"
            android:layout_alignBottom="@+id/tvDate"
            android:textColor="@color/colorAccent"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <CheckBox
            android:id="@+id/cbArt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/artCheckBox" />

        <CheckBox
            android:id="@+id/cbFashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/fashionCheckBox" />

        <CheckBox
            android:id="@+id/cbSport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="left"
            android:text="@string/sportCheckBox"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveBtn"
        android:background="@color/colorAccent"
        android:layout_below="@+id/linearLayout"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>